# django-orm-adapter

./: .coveragerc  .gitignore  .travis.yml  CHANGELOG.md  README.md  pyproject.toml  requirements.txt  requirements_dev.txt  setup.cfg  setup.py
.github/workflows/: build.yml
authorization/: apps.py  views.py
casbin_adapter/: adapter.py  apps.py  enforcer.py  models.py  utils.py
casbin_adapter/migrations/: 0001_initial.py
casbin_adapter/tests/: test_adapter.py
casbin_django_orm_adapter/: adapter.py  apps.py
django_test/: settings.py  urls.py
tests/: settings.py  test_adapter.py
